# PassIt

./: .gitignore  CMakeLists.txt  GamePlay.md  README.md  README_install.md
app/: CMakeLists.txt  main  main.cc  main1
assets/Beach/: test.drawio
configured/: config.hpp.in
docs/: Architecture.md  Introduction.md  Scenarios.md
src/: CMakeLists.txt
src/CommandAndLogic/: AbstractManager.cpp  AbstractManager.h  CMakeLists.txt  CommandDispatcher.cpp  CommandDispatcher.h  Engine.cpp  Engine.h  Input.cpp  Input.h  MovementManager.cpp  MovementManager.h  WindowManager.cpp  WindowManager.h
src/Display/: CMakeLists.txt  Text.cpp  Text.h  TextureFactory.cpp  TextureFactory.h  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h
src/Object/: CMakeLists.txt  Deco.cpp  Deco.h  DynamicObject.cpp  DynamicObject.h  EndObject.cpp  EndObject.h  Hero.cpp  Hero.h  ObjectFactory.cpp  ObjectFactory.h  ObjectManager.cpp  ObjectManager.h  PauseObject.cpp  PauseObject.h  SettingFactory.cpp  SettingFactory.h  SettingObject.cpp  SettingObject.h  StaticObject.cpp  StaticObject.h  TextFactory.cpp  TextFactory.h
src/Utilities/: CMakeLists.txt  Exception.h  Frame.cpp  Frame.h  Map.h  Object.h  ObserverPattern.h  Position.cpp  Position.h  Score.h  Setting.cpp  Setting.h  TextObject.h
src/bar/: CMakeLists.txt  bar.cc
src/foo/: CMakeLists.txt  foo.cc
tests/: CMakeLists.txt  test_bar.cc
